# jhsph-interview

./: .gitignore  LICENSE.txt  README.md  dune-project  essay.aux  essay.md  essay.tex  interview.R  interview.opam
docs/: essay.aux  essay.md  essay.out  essay.tex
haskell/: CHANGELOG.md  Readme.md  haskell.hs  interview.cabal
lib/: dune  heap_sort.ml  heap_sort.v  partitions.ml  quick_sort.ml
